# cuvs

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.rust-kmeans  README.md  UPSTREAM_PR_BODY.md  VERSION  benchmark_kmeans.py  build-rust-kmeans.sh  build.sh  build_repro.sh  cagra_float16_support.patch  compute_distance-ext.cuh  compute_distance.cu  debug_cuda_error.sh  dependencies.yaml  diff.diff  docker-compose.rust-kmeans.yml  f.txt  fetch_rapids.cmake  pr.md  pyproject.toml  raft_discrete.cu  rapids_config.cmake  repro_kmeans_mg.cu  run_bench.sh  run_benchmark_kmeans.sh
c/: CMakeLists.txt
c/src/cluster/: gmm.cpp  kmeans.cpp  mg_kmeans.cpp
c/src/core/: c_api.cpp  exceptions.hpp  interop.hpp
c/src/distance/: pairwise_distance.cpp
c/src/neighbors/: all_neighbors.cpp  brute_force.cpp  cagra.cpp  cagra.hpp  hnsw.cpp  ivf_flat.cpp  ivf_flat.hpp  ivf_pq.cpp  ivf_pq.hpp  ivf_sq.cpp  ivf_sq.hpp  mg_cagra.cpp  mg_ivf_flat.cpp  mg_ivf_pq.cpp  nn_descent.cpp  refine.cpp  tiered_index.cpp  vamana.cpp
c/src/preprocessing/: pca.cpp
c/src/selection/: select_k.cpp
c/tests/: CMakeLists.txt
c/tests/cluster/: gmm_c.cu  kmeans_c.cu  kmeans_mg_c.cu  run_kmeans_c.c
c/tests/cmake/: header_check.cmake
c/tests/core/: c_api.c  headers.c  interop.cu
c/tests/distance/: pairwise_distance_c.cu  run_pairwise_distance_c.c
c/tests/neighbors/: all_neighbors_c.cu  ann_cagra_c.cu  ann_hnsw_c.cu  ann_hnsw_cagra_c.cu  ann_ivf_flat_c.cu  ann_ivf_pq_c.cu  ann_ivf_sq_c.cu  ann_mg_c.cu  ann_tiered_index_c.cu  brute_force_c.cu  c_api.c  run_all_neighbors_c.c  run_brute_force_c.c  run_ivf_flat_c.c  run_ivf_pq_c.c  run_ivf_sq_c.c  run_mg_c.c
c/tests/preprocessing/: pca_c.cu  run_pca_c.c
c/tests/selection/: select_k_c.cu
ci/check_c_abi/: pyproject.toml
ci/check_c_abi/check_c_abi/: __init__.py  abi.py  main.py
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  agents.md
cpp/.clangd_headers/: cuda_runtime.h
cpp/bench/ann/: CMakeLists.txt
cpp/bench/micro/: CMakeLists.txt
cpp/bench/neighbors/: ivf_flat_baseline_benchmark.cu  ivf_flat_jit_benchmark.cu
cpp/bench/prims/: CMakeLists.txt
cpp/cmake/: config.json  embed_cuda_fp16.cmake
cpp/cmake/jit_lto_kernels_list/: interleaved_scan.cmake
cpp/cmake/modules/: ConfigureCUDA.cmake  FindAVX.cmake  FindSVE.cmake  compute_matrix_product.cmake  compute_matrix_product.py  determine_cuvs_abi_version.cmake  embed_fatbins.cmake  generate_cutile_kernels.cmake  generate_cuvs_export.cmake  generate_header.cmake  generate_inst_matrix.cmake  generate_interleaved_scan_kernels.cmake  generate_jit_lto_kernels.cmake  generate_string_matrix.cmake  register_cubin.cpp.in  register_cutile_fragment.cpp.in  register_fatbin.cpp.in  register_tileir.cpp.in
cpp/cmake/patches/: bang_override.json  diskann.diff  diskann_override.json  eigen.diff  eigen_override.json  faiss-1.13-cuvs-25.12.diff  faiss-1.13-cuvs-26.02.diff  faiss-1.13-cuvs-26.04.diff  faiss-1.14-cuvs-26.04.diff  faiss-1.14-cuvs-26.06-update-dataset.diff  faiss-1.14-cuvs-26.06.diff  faiss-1.14-cuvs-26.08.diff  faiss-25.12.diff  faiss.diff  faiss_override.json  ggnn.diff  ggnn_override.json  hnswlib.diff  hnswlib_override.json
cpp/doxygen/: Doxyfile  main_page.md
cpp/examples/: CMakeLists.txt  README.md  build.sh  ivf_pq_helpers_example.cpp
cpp/internal/: CMakeLists.txt
cpp/scripts/: __clang_cuda_additional_intrinsics.h  analyze_nvcc_log.py  gitutils.py  include_checker.py  run-clang-compile.py  run-clang-tidy-hook.sh  run-clang-tidy.py  run-cmake-format.sh
cpp/src/cluster/: agglomerative.cu  gmm.cuh  gmm_double.cu  gmm_float.cu  gmm_impl.cuh  gmm_kernels.cuh  kmeans.cuh  kmeans_auto_find_k_float.cu  kmeans_balanced.cuh  kmeans_balanced_build_clusters_float.cu  kmeans_balanced_build_clusters_impl.cuh  kmeans_balanced_fit_float.cu  kmeans_balanced_fit_half.cu  kmeans_balanced_fit_int8.cu  kmeans_balanced_fit_predict_float.cu  kmeans_balanced_fit_predict_int8.cu  kmeans_balanced_fit_uint8.cu  kmeans_balanced_impl_fit_predict.cuh  kmeans_balanced_predict_float.cu  kmeans_balanced_predict_half.cu  kmeans_balanced_predict_int8.cu  kmeans_balanced_predict_uint8.cu  kmeans_c.cpp  kmeans_cluster_cost.cu  kmeans_fit_batched_int8_uint8_half.cu  kmeans_fit_double.cu  kmeans_fit_float.cu  kmeans_fit_mg_double.cu  kmeans_fit_mg_float.cu  kmeans_fit_predict_double.cu  kmeans_fit_predict_float.cu  kmeans_impl.cuh  kmeans_impl_fit_predict.cuh  kmeans_mg.hpp  kmeans_mg_impl.cuh  kmeans_predict_double.cu  kmeans_predict_float.cu  kmeans_transform_double.cu  kmeans_transform_float.cu  single_linkage.cuh  (+3 more)
cpp/src/core/: bitset.cu  bitset.cuh  c_api.cpp  mnmg_comms.cuh  nvtx.hpp  omp_wrapper.cpp  omp_wrapper.hpp  setup.cpp
cpp/src/dimred/: spectral.cu
cpp/src/distance/: distance-ext.cuh  distance-inl.cuh  distance.cu  distance.cuh  distance_types.hpp  fused_distance_nn-ext.cuh  fused_distance_nn-inl.cuh  fused_distance_nn.cu  fused_distance_nn.cuh  fused_distance_nn_helpers.cuh  fused_l2_nn-ext.cuh  fused_l2_nn-inl.cuh  fused_l2_nn.cu  fused_nn-ext.cuh  fused_nn-inl.cuh  fused_nn.cu  fused_nn.cuh  fused_nn_helpers.cuh  kde.cu  kernel_gram.cu  kernels.cuh  masked_nn.cuh  pairwise_distance.cu  (+4 more)
cpp/template/: CMakeLists.txt  README.md  build.sh
cpp/test/: CMakeLists.txt  test.cpp  test_utils.cuh
cpp/tests/: CMakeLists.txt  get_test_data.sh  test.cpp  test_utils.cuh  test_utils.h
cpp/tools/: CMakeLists.txt  generate_generic_json.cpp
examples/c/: CMakeLists.txt
examples/cpp/: CMakeLists.txt  README.md  plot_allocations.py  plot_filter_benchmark.py
java/internal/: CMakeLists.txt  get_dlpack.cmake  rapids_config.cmake
python/cuvs/: .coveragerc  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
python/cuvs_bench_elastic/: README.md  pyproject.toml
python/libcuvs/: CMakeLists.txt  pyproject.toml
rust/: Cargo.toml  rustfmt.toml
rust/cuvs/: Cargo.toml  build.rs
rust/cuvs-sys/: CMakeLists.txt  Cargo.toml  build.rs  cmake.rs  cuvs_c_wrapper.h
rust/scripts/: generate-bindings.sh
(+5871 files in other folders)
